Agrege texto informativo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
             <section>
                 <div class="buttontBox">
+                        <label for="input-texto">Solo letras minusculas sin acento</label>
                         <button class="boton" type="button" id="botonEncriptado">Encriptar</button>
                         <button class="boton" type="button" id="botonDesencriptado">Desencriptar</button>
                         <button class="boton" type="button" id="botonCopiar">Copiar</button>
