Se modifican los textos, y se coloca acento

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <input required="required" type="text" autocomplete="off" id="textoEncriptado"/>
                 <span>Ingrese Texto a Encriptar / Desencriptar</span>
             </div>
+            <label for="input-texto">Solo letras minúsculas sin acento</label>
             <section>
-                <div class="buttontBox">
-                        <label for="input-texto">Solo letras minusculas sin acento</label>
+                <div class="buttontBox">   
                         <button class="boton" type="button" id="botonEncriptado">Encriptar</button>
                         <button class="boton" type="button" id="botonDesencriptado">Desencriptar</button>
                         <button class="boton" type="button" id="botonCopiar">Copiar</button>
